--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="col-xl-7 col-12 col-md-9  m-0 p-0">
-	<div class="container">
+	<div class="container" id="container-main-target">
 
 		{% block post %}
 		{% endblock post %}
