fix private chat

--- a/chat/templates/chat/room_backup.html
+++ b/chat/templates/chat/room_backup.html
@@ -1,7 +1,7 @@
 <!-- PrivateChatRoom -->
 <!-- Chat room for 1 on 1 conversations -->
 
-{{% extends 'personal/home.html' %}
+{% extends 'personal/home.html' %}
 {% load static %}
 
 {% block post %}
