--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -1,10 +1,10 @@
 <!-- PrivateChatRoom -->
 <!-- Chat room for 1 on 1 conversations -->
 
-{% extends 'layout-blank.html' %}
+{% extends 'personal/home_wide.html' %}
 {% load static %}
 
-{% block content %}
+{% block post %}
 
 <!--<script src="{% static 'bootstrap/js/jquery-3.6.0.js' %}"></script>-->
 <script
@@ -653,4 +653,4 @@
 	}
 </script>
 
-{% endblock content %}
+{% endblock post %}
