--- a/account/templates/account/edit_account_backup.html
+++ b/account/templates/account/edit_account_backup.html
@@ -126,7 +126,11 @@
 									<h6 class="mb-0">Status</h6>
 								</div>
 								<div class="col-sm-9 text-secondary">
+									{% if profile.occupation %}
+									<select name="occupation" id="" class="form-control" disabled>
+									{% else %}
 									<select name="occupation" id="" class="form-control">
+									{% endif %}
 										<option value=""></option>
 										{% for occupation in occupations %}
 										<option value="{{occupation.pk}}"
@@ -151,7 +155,11 @@
 									<h6 class="mb-0">Prodi</h6>
 								</div>
 								<div class="col-sm-9 text-secondary">
+									{% if profile.occupation.name == "Dosen" or profile.occupation.name == "Staff" %}
+									<select name="jurusan" id="" class="form-control" disabled>
+									{% else %}
 									<select name="jurusan" id="" class="form-control">
+									{% endif %}
 										<option value=""></option>
 										{% for prodi in prodis %}
 										<option value="{{prodi.pk}}"
