--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -30,7 +30,7 @@
 	<div class="row justify-content-center">
 		<div class="card card-signin">
 		  <div class="card-body">
-		    <form class="form-signin" method="post">{% csrf_token %}
+		    <form class="form-signin" hx-post="{% url 'login' %}" hx-target="#replacableTarget">{% csrf_token %}
 				
 				<div class="d-flex flex-column pb-3">
 				<div class="container-fluid" style="font: 17px -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
@@ -39,13 +39,13 @@
 				<br>
 
 				
-				<input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+				<input style="width: 90%; margin: auto;" type="email" name="email" id="inputEmail" class="form-control mb-2" placeholder="Email address" required autofocus>
 
-				<input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required>
+				<input style="width: 90%; margin: auto;" type="text" name="username" id="inputUsername" class="form-control mb-2" placeholder="Username" required>
 
-				<input type="password" name="password1" id="inputPassword1" class="form-control" placeholder="Password" required>
+				<input style="width: 90%; margin: auto;" type="password" name="password1" id="inputPassword1" class="form-control mb-2" placeholder="Password" required>
 
-				<input type="password" name="password2" id="inputPassword2" class="form-control" placeholder="Confirm password" required>
+				<input style="width: 90%; margin: auto;" type="password" name="password2" id="inputPassword2" class="form-control mb-2" placeholder="Confirm password" required>
 
 				{% for field in registration_form %}
 				<p>
@@ -61,7 +61,7 @@
 
 				{% endif %}
 				
-				<button class="btn btn-lg btn-primary btn-block" type="submit" name="btnRegis">Register</button>
+				<button style="width: 90%; margin: auto;" class="btn btn-lg btn-primary btn-block" name="btnRegis" hx-post="{% url 'login' %}" hx-target="#replacableTarget">Register</button>
 				
 				</form>
 		  </div>
