some modif and added notif:

--- a/blog/templates/blog/blog_form.html
+++ b/blog/templates/blog/blog_form.html
@@ -86,8 +86,8 @@
       {{form.body}}
       <span class="helptext">{{form.body.help_text}}</span>
     </div>
-    <input type="submit" name="publish" class="btn btn-success" value="Publish">
-    <input type="submit" name="draft" class="btn btn-primary" value="Add to draft">
+    <input type="submit" name="publish" class="btn btn-success mb-2" value="Publish">
+    <input type="submit" name="draft" class="btn btn-primary mb-2" value="Add to draft">
   </form>
 </div>
 
