--- a/forum/templates/forum/snippets/forum_detail_form.html
+++ b/forum/templates/forum/snippets/forum_detail_form.html
@@ -13,7 +13,7 @@
     <!--<form onsubmit='copyContent()' method= "post" hx-post= "{% url 'forum:forum-detail' post.pk %}" hx-swap="innerHTML" hx-target = "#comment-list">-->
         <div class="modal-body">
             <div class="form-group">
-                <label for="threadTitle" style="color: oldlace;">Your Answer</label>
+                <label for="threadTitle">Your Answer</label>
                 <textarea name="reply" class="form-control summernote" placeholder="Input your answer here"></textarea>
             </div>
         </div>
