--- a/forum/templates/forum/snippets/forum_home_content.html
+++ b/forum/templates/forum/snippets/forum_home_content.html
@@ -3,7 +3,7 @@
 <div class="css-1dbjc4n">
    <section aria-labelledby="accessible-list-66" role="region" class="css-1dbjc4n">
       <h1 dir="auto" aria-level="1" role="heading" class="css-4rbku5 css-901oao r-4iw3lz r-1xk2f4g r-109y4c4 r-1udh08x r-wwvuq4 r-u8s1d r-92ng3h" id="accessible-list-66">Hubungkan</h1>
-      <div aria-label="Timeline: Hubungkan" class="css-1dbjc4n">
+      <div class="css-1dbjc4n">
          <div style="position: relative; min-height: 10772.1px;">
             <div style="transform: translateY(0px); position: absolute; width: 100%; transition: opacity 0.3s ease-out 0s;">
                <div class="css-1dbjc4n r-1adg3ll r-1ny4l3l"></div>
