--- a/templates/snippets/sidebar_2.html
+++ b/templates/snippets/sidebar_2.html
@@ -54,7 +54,7 @@
         </li>
         <li class="nav-label">Settings</li>
         <li>
-            <a href="#" aria-expanded="false">
+            <a href="{% url 'blog:blog-detail' 6 %}" aria-expanded="false">
                 <i class="fas fa-info-circle"></i><span class="nav-text">About</span>
             </a>
         </li>
