cleanup and caching s3

--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -62,7 +62,7 @@
 				{% endif %}
 				
 				<button style="width: 90%; margin: auto;" class="btn btn-lg btn-primary btn-block" name="btnRegis" hx-post="{% url 'login' %}" hx-target="#replacableTarget">Register</button>
-				
+				<p style="width: 90%; margin: auto;">Password atleast have one numerical and cannot be too similar with username</p>
 				</form>
 		  </div>
 		</div>
