--- a/post/templates/post/post_list_2.html
+++ b/post/templates/post/post_list_2.html
@@ -56,22 +56,6 @@
 </script>
 
 <script>
-    function getCookie(name) {
-        let cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            const cookies = document.cookie.split(';');
-            for (let i = 0; i < cookies.length; i++) {
-                const cookie = cookies[i].trim();
-                // Does this cookie string begin with the name we want?
-                if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
-                }
-            }
-        }
-        return cookieValue;
-    }
-    const csrftoken = getCookie('csrftoken');
 
     function sentAJAX_like(pk){
         var id = "like-button-"+pk
@@ -114,7 +98,7 @@
 </script>
 <script>
     function onClickedImage(){
-        $(".css-9pa8cd-qqq").click(function(){
+        $(".css-9pa8cd").click(function(){
           $("#full-image").attr("src", $(this).attr("src"));
           $('#image-viewer').show();
         });
