--- a/templates/snippets/css/sidebar.css
+++ b/templates/snippets/css/sidebar.css
@@ -1,118 +1,3 @@
 <style>
-    /* Scrollbar-effect------- */
-    #accordian::-webkit-scrollbar {
-        width: 5px;
-        height: 8px;
-    }
-    #accordian::-webkit-scrollbar-track {
-        border-radius: 10px;
-        background-color: #e4e4e4;
-    }
-    #accordian::-webkit-scrollbar-thumb {
-        background: #0089ff;
-        border-radius: 10px;
-        transition: 0.5s;
-    }
-    #accordian::-webkit-scrollbar-thumb:hover {
-        background: #d5b14c;
-        transition: 0.5s;
-    }
-
-
-
-    /* --------- */
-
-    #accordian {
-        background: #fff;
-        width: 100%;
-        /* padding: 10px; */
-        float: left;
-        height: 100vh;
-        overflow-x: hidden;
-        /* border-radius: 10px;
-        box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white); */
-    }
-
-
-    #accordian a {
-        
-        
-        
-    }
-
-
-    i {
-        margin-right: 10px;
-    }
-
-    #accordian li {
-        list-style-type: none;
-    }
-
-    #accordian ul li a{
-        color: #000;
-        text-decoration: none;
-        font-size: 20px;
-        display: block;
-    /*  line-height: 34px; */
-        padding: 12px 15px;
-        transition: all 0.15s;
-        position: relative;
-        border-radius: 3px;
-    }
-
-    #accordian>ul.show-dropdown>li.active>a,
-    #accordian>ul>li>ul.show-dropdown>li.active>a,
-    #accordian>ul>li>ul>li>ul.show-dropdown>li.active>a,
-    #accordian>ul>li>ul>li>ul>li>ul.show-dropdown>li.active>a,
-    #accordian>ul>li>ul>li>ul>li>ul>li>ul.show-dropdown>li.active>a{
-        background-color: #a8d4fb;
-        color: #0089ff;
-        box-shadow: 0px 1px 2px rgba(0, 137, 255, 0.2);
-    }
-
-    #accordian>ul>li>ul,
-    #accordian>ul>li>ul>li>ul,
-    #accordian>ul>li>ul>li>ul>li>ul,
-    #accordian>ul>li>ul>li>ul>li>ul>li>ul {
-        display: none;
-    }
-
-
-    #accordian>ul>li.active>ul.show-dropdown,
-    #accordian>ul>li>ul>li.active>ul.show-dropdown,
-    #accordian>ul>li>ul>li>ul>li.active>ul.show-dropdown,
-    #accordian>ul>li>ul>li>ul>li>ul>li.active>ul.show-dropdown {
-        display: block;
-    }
-
-    #accordian>ul>li>ul,
-    #accordian>ul>li>ul>li>ul,
-    #accordian>ul>li>ul>li>ul>li>ul,
-    #accordian>ul>li>ul>li>ul>li>ul>li>ul {
-        padding-left: 20px;
-    }
-
-    #accordian a:not(:only-child):after {
-        content: "\f105";
-        position: absolute;
-        right: 20px;
-        top: 14px;
-        font-size: 20px;
-        font-family: "Font Awesome 5 Free";
-        display: inline-block;
-        padding-right: 3px;
-        vertical-align: middle;
-        font-weight: 900;
-        transition: 0.5s;
-    }
-
-    #accordian .active>a:not(:only-child):after {
-            transform: rotate(90deg);
-    }
-
-    .nav-label {
-        color: #1da1f2;
-        font-weight: bold;
-    }
+#accordian::-webkit-scrollbar{width:5px;height:8px}#accordian::-webkit-scrollbar-track{border-radius:10px;background-color:#e4e4e4}#accordian::-webkit-scrollbar-thumb{background:#0089ff;border-radius:10px;transition:.5s}#accordian::-webkit-scrollbar-thumb:hover{background:#d5b14c;transition:.5s}#accordian{background:#fff;width:100%;float:left;height:100vh;overflow-x:hidden}i{margin-right:10px}#accordian li{list-style-type:none}#accordian ul li a{color:#000;text-decoration:none;font-size:20px;display:block;padding:12px 15px;transition:all .15s;position:relative;border-radius:3px}#accordian>ul.show-dropdown>li.active>a,#accordian>ul>li>ul.show-dropdown>li.active>a,#accordian>ul>li>ul>li>ul.show-dropdown>li.active>a,#accordian>ul>li>ul>li>ul>li>ul.show-dropdown>li.active>a,#accordian>ul>li>ul>li>ul>li>ul>li>ul.show-dropdown>li.active>a{background-color:#a8d4fb;color:#0089ff;box-shadow:0 1px 2px rgba(0,137,255,.2)}#accordian>ul>li>ul,#accordian>ul>li>ul>li>ul,#accordian>ul>li>ul>li>ul>li>ul,#accordian>ul>li>ul>li>ul>li>ul>li>ul{display:none}#accordian>ul>li.active>ul.show-dropdown,#accordian>ul>li>ul>li.active>ul.show-dropdown,#accordian>ul>li>ul>li>ul>li.active>ul.show-dropdown,#accordian>ul>li>ul>li>ul>li>ul>li.active>ul.show-dropdown{display:block}#accordian>ul>li>ul,#accordian>ul>li>ul>li>ul,#accordian>ul>li>ul>li>ul>li>ul,#accordian>ul>li>ul>li>ul>li>ul>li>ul{padding-left:20px}#accordian a:not(:only-child):after{content:"\f105";position:absolute;right:20px;top:14px;font-size:20px;font-family:"Font Awesome 5 Free";display:inline-block;padding-right:3px;vertical-align:middle;font-weight:900;transition:.5s}#accordian .active>a:not(:only-child):after{transform:rotate(90deg)}.nav-label{color:#1da1f2;font-weight:700}
 </style>
